<resources>
    <string name="app_name">Search word</string>
    //menu items
    <string name="saved_websites_menu">Saved websites</string>
    <string name="home_menu">Home</string>
    <string name="refresh_menu">Refresh</string>
    <string name="search_menu">Search</string>
    <string name="save_menu">Save link</string>
    <string name="share_menu">Share link</string>
    <string name="about_menu">About app</string>
    <string name="more_menu">More</string>
    <string name="copy_link">Copy link</string>
    <string name="delete_link">Delete</string>
    //app info
    <string name="action_menu_back">Back</string>
    <string name="todo">TODO</string>
    <string name="no_internet_info">Please check your internet connection</string>
    <string name="what_to_do_info">Please type the search phrase and choose a website to search for it</string>
    <string name="share_info">There is a problem with share link. Please try when search text is not empty and browser is visible</string>
    <string name="Shared_pref_id">MySharedPref</string>
    <string name="close_website_menu">Close website</string>
    <string name="text_view_helper_home_fragment">Type a word and select the page where you want to search for it</string>
    <string name="image_view_helper_home_fragment">HelperHomeFragmentImage</string>
    <string name="text_view_helper_saved_website">The list of saved hyperlinks is empty</string>
    <string name="image_view_helper_saved_website">SavedWebsiteImage</string>
    <string name="link_value">Example link</string>
    <string name="link_title">Link title example</string>
    <string name="last_updated_time">Saved time</string>
    <string name="SavedWebsiteActivityTitle">Saved web links</string>
    <string name="saved_item_info">Web link saved successfully</string>
    <string name="link_removed">Link removed successfully</string>
    <string name="delete_string">Delete</string>
    <string name="cancel_string">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="delete_dialog_title">Delete link</string>
    <string name="delete_dialog_confirmation">Do you want to delete link? \n"</string>
    <string name="deleted_info">Deleted</string>
    <string name="copied_link_id">Copied Link</string>
    <string name="search_query_hint">Type phrase…</string>
    <string name="open_link_in_web_view_menu">Open in browser</string>
    <string name="save_info">There is a problem with save link. Please try when search text is not empty and browser is visible</string>
    <string name="open_in_browser">There is a problem with save open link in browser. Please try again later</string>
    <string name="HomeFragmentTitle">Search word</string>
    <string name="action_menu_forward">Forward</string>
    <string name="exit_app">Exit app</string>
    <string name="exit_app_confirm">Do you really want to close app?</string>
    <string name="rate_app_info">Rate app</string>
    //websites names, values and queries
    <string name="google_name">Google</string>
    <string name="yahoo_name">Yahoo</string>
    <string name="twitter_name">Twitter</string>
    <string name="youtube_name">Youtube</string>
    <string name="reddit_name">Reddit</string>
    <string name="wikipedia_name">Wikipedia</string>
    <string name="amazon_name">Amazon</string>
    <string name="ebay_name">Ebay</string>
    <string name="pinterest_name">Pinterest</string>
    <string name="dictionary_name">Dictionary</string>
    <string name="bing_name">Bing</string>
    <string name="tiktok_name">Tiktok</string>
    <string name="instagram_name">Instagram</string>
    <string name="yandex_name">Yandex</string>
    <string name="duck_duck_go">DuckDuckGo</string>
    <string name="netflix_name">Netflix</string>
    <string name="spotify_name">Spotify</string>
    <string name="google_maps_name">Google Maps</string>
    <string name="google_value">https://www.google.com/search?</string>
    <string name="google_endpoint">q=</string>
    <string name="bing_value">https://www.bing.com/search?</string>
    <string name="bing_endpoint">q=</string>
    <string name="yahoo_value">https://search.yahoo.com/search?</string>
    <string name="yahoo_endpoint">p=</string>
    <string name="duck_duck_go_value">https://duckduckgo.com/?</string>
    <string name="duck_duck_go_endpoint">q=</string>
    <string name="yandex_value">https://yandex.com/search/?</string>
    <string name="yandex_endpoint">text=</string>
    <string name="youtube_value">https://www.youtube.com/results?</string>
    <string name="youtube_endpoint">search_query=</string>
    <string name="twitter_value"><![CDATA[https://twitter.com/search?lang=pl&]]></string>
    <string name="twitter_endpoint">q=</string>
    <string name="instagram_value">https://www.instagram.com/explore/tags/</string>
    <string name="reddit_value">https://www.reddit.com/search/?</string>
    <string name="reddit_endpoint">q=</string>
    <string name="wikipedia_value">https://en.m.wikipedia.org/wiki/</string>
    <string name="amazon_value">https://www.amazon.pl/s?</string>
    <string name="amazon_endpoint">k=</string>
    <string name="ebay_value">https://www.ebay.pl/sch/i.html?_</string>
    <string name="ebay_endpoint">nkw=</string>
    <string name="pinterest_value">https://pl.pinterest.com/search/pins/?</string>
    <string name="pinterest_endpoint">q=</string>
    <string name="netflix_value">https://www.netflix.com/search?</string>
    <string name="netflix_endpoint">q=</string>
    <string name="spotify_value">https://open.spotify.com/search/results/</string>
    <string name="google_maps_value">https://google.com/maps/search/</string>
    <string name="tiktok_value">https://www.tiktok.com/search?</string>
    <string name="tiktok_endpoint">q=</string>
    <string name="aliexpress_name">AlieExpress</string>
    <string name="aliexpress_value">https://pl.aliexpress.com/w/wholesale-</string>
    <string name="aliexpress_endpoint">-</string>
    <string name="google_image_name">Image search</string>
    <string name="quora_name">Quora</string>
    <string name="google_image_value"><![CDATA[https://www.google.com/search?tbm=isch&]]></string>
    <string name="google_image_endpoint">q=</string>
    <string name="quora_value">https://www.quora.com/search?</string>
    <string name="quora_endpoint">q=</string>
</resources>