<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_back_bottom_nav"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/action_menu_back" />

    <item
        android:id="@+id/action_close_browser_bottom_nav"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close_website_menu" />

    <item
        android:id="@+id/action_refresh_bottom_nav"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh_menu" />

    <item
        android:id="@+id/action_home_bottom_nav"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_menu"
        android:visible="false" />

    <item
        android:id="@+id/action_more_bottom_nav"
        android:icon="@drawable/ic_baseline_format_list_more"
        android:title="@string/more_menu" />

</menu>