<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.HomeFragment">

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scrollbars="none"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="15dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bing_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yahoo_name" />


            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_name" />


            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youtube_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reddit_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wikipedia_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazon_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ebay_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pinterest_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dictionary_name" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/search"
        android:contentDescription="@string/todo" />

</FrameLayout>