<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity_color"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="15dp"
            app:singleSelection="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_name"/>

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yahoo_name"/>


            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_name" />


            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youtube_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reddit_name"/>

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wikipedia_name"/>

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazon_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ebay_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pinterest_name" />

            <com.google.android.material.chip.Chip
                style="@style/CustomStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dictionary_name" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>